<resources>
    <string name="app_name">MyMobileAss</string>
    <string name="homeTitle">Env. Safe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Chew Jane</string>
    <string name="nav_header_subtitle">no email sorry</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Declared in side bar menu & home page-->
    <string name="menu_home">Home</string>
    <string name="menu_aware">Environment Awareness</string>
    <string name="menu_news">News</string>
    <string name="menu_coverage">Forest Coverage</string>
    <string name="menu_org">Organizations</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_plant">Plant a Tree</string>
    <string name="menu_login">Login</string>

    <string name="title_quiz">Quiz %1$d of %2$d</string>

    <!--Declared in login page-->
    <string name="login_email">Email :</string>
    <string name="login_pw">Password :</string>
    <string name="signIn">Sign In</string>
    <string name="create_acc">Create Account</string>
    <string name="login_reenter_pw">Re-enter Password :</string>

    <!--Declared in awareness page-->
    <string name="awareness_aware">Environment Awareness</string>
    <string name="awareness_intro"> Environmental Awareness
        \n is to understand
        \n the fragility of our
        \n environment and the
        \n importance of
        \n its protection. </string>
    <string name="awareness_importance">Importance</string>
    <string name="awareness_effect">Effect</string>
    <string name="awareness_protect">Ways to Protect</string>
    <string name="awareness_issue">Environmental \nIssues</string>
    <string name="awareness_habit">Good Habits</string>


    <!--Declared in organizations page-->
    <string name="org_title">List of Environmental Organizations</string>
    <string-array name="int_org">
        <item>World Wide Fund for Nature (WWF)</item>
        <item>GreenPeace</item>
        <item>Gloabal Environment Facility</item>
    </string-array>

    <!-- Declared in importance page-->
    <string name="importance_title">Importance of \nEnvironmental Awareness</string>
    <string name="importance_reason">30 reasons why humankind should
        \n conserve and preserve the environment</string>

    <string name="receiver">To:</string>
    <string name="message">Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
