<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_awareness"
            android:icon="@drawable/ic_menu_public_black_24dp"
            android:title="@string/menu_aware" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_newsicon"
            android:title="@string/menu_news" />

        <item
            android:id="@+id/nav_coverage"
            android:icon="@drawable/ic_menu_treecoverageicon"
            android:title="@string/menu_coverage" />

        <item
            android:id="@+id/nav_org"
            android:icon="@drawable/ic_menu_group_black_24dp"
            android:title="@string/menu_org" />

        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_menu_help_outline_black_24dp"
            android:title="@string/menu_quiz" />

        <item
            android:id="@+id/nav_plant"
            android:icon="@drawable/ic_menu_planttreeicon"
            android:title="@string/menu_plant" />


    </group>

    <item android:title="Login">
        <menu>

            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_account_circle_black_24dp"
                android:title="@string/menu_login" />
        </menu>
    </item>

</menu>