<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_default"
    android:paddingRight="@dimen/margin_default"
    tools:context=".ui.login.Login">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/margin_padding"
        app:srcCompat="@drawable/ic_home_leaflflogo" />

    <TextView
        android:id="@+id/txtSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default"
        android:fontFamily="sans-serif-medium"
        android:text="@string/create_acc"
        android:textAlignment="center"
        android:textColor="#0A0A0A"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_email"
        android:textColor="@android:color/black"
        android:textSize="18dp"/>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default" />


    <TextView
        android:id="@+id/lblPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_pw"
        android:textColor="@android:color/black"
        android:textSize="18dp"/>

    <EditText
        android:id="@+id/txtPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default" />

    <TextView
        android:id="@+id/lblPW2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_reenter_pw"
        android:textColor="@android:color/black"
        android:textSize="18dp"/>

    <EditText
        android:id="@+id/txtPW2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default" />

    <Button
        android:id="@+id/btnSignClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default"
        android:paddingLeft="@dimen/margin_default"
        android:paddingRight="@dimen/margin_default"
        android:fontFamily="sans-serif-medium"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/create_acc"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp" />




</LinearLayout>
