<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">


        <!--<TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    -->
        <TextView
            android:id="@+id/envTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart = "16dp"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/homeTitle"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.036" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="52dp"
            android:layout_height="66dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="logo img of app"
            app:layout_constraintBottom_toTopOf="@+id/nav_awareness"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_home_leaflflogo" />

        <!--<Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="36dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:text="@string/menu_login"
            android:textColor="@android:color/holo_green_light"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toEndOf="@+id/envTitle"
            app:layout_constraintTop_toTopOf="parent" />-->


        <View
            android:id="@+id/divider3"
            android:layout_width="379dp"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd= "24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/nav_awareness"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:background="@android:color/transparent"
            android:contentDescription="environment awareness button with logo"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/divider3"
            app:srcCompat="@drawable/ic_home_awarenesslogo" />

        <TextView
            android:id="@+id/envAwareness"
            android:layout_width="90dp"
            android:layout_height="41dp"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:text="@string/menu_aware"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/subTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_awareness" />

        <ImageButton
            android:id="@+id/newsLogo"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/margin_default"
            android:background="@android:color/transparent"
            android:contentDescription="news leaf logo"
            android:gravity="center"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/coverageLogo"
            app:layout_constraintStart_toEndOf="@+id/nav_awareness"
            app:layout_constraintTop_toTopOf="@+id/divider3"
            app:srcCompat="@drawable/ic_home_newsleaf" />

        <TextView
            android:id="@+id/txtNews"
            android:layout_width="81dp"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/menu_news"
            android:textColor="@android:color/black"
            android:textSize="@dimen/subTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newsLogo" />

        <ImageButton
            android:id="@+id/coverageLogo"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:background="@android:color/transparent"
            android:contentDescription="tree logo for forest coverage"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider3"
            app:srcCompat="@drawable/ic_home_forestlogo" />

        <TextView
            android:id="@+id/txtCoverage"
            android:layout_width="70dp"
            android:layout_height="43dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin_default"
            android:text="@string/menu_coverage"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/subTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coverageLogo" />

        <ImageButton
            android:id="@+id/organizationLogo"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="third party organizations logo"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3"
            app:srcCompat="@drawable/ic_home_orglogo" />

        <TextView
            android:id="@+id/txtOrganization"
            android:layout_width="106dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="30dp"
            android:text="@string/menu_org"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/subTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <ImageButton
            android:id="@+id/quizLogo"
            android:layout_width="94dp"
            android:layout_height="47dp"
            android:layout_marginTop="155dp"
            android:background="@android:color/transparent"
            android:contentDescription="quiz logo"
            android:gravity="center"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/plantTreeLogo"
            app:layout_constraintStart_toEndOf="@+id/organizationLogo"
            app:layout_constraintTop_toBottomOf="@+id/divider3"
            app:srcCompat="@drawable/ic_home_quizcroplogo" />

        <TextView
            android:id="@+id/txtQuiz"
            android:layout_width="75dp"
            android:layout_height="18dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/menu_quiz"
            android:textColor="@android:color/black"
            android:textSize="@dimen/subTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quizLogo" />

        <ImageButton
            android:id="@+id/plantTreeLogo"
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="@dimen/margin_default"
            android:background="@android:color/transparent"
            android:contentDescription="plant tree logo"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3"
            app:srcCompat="@drawable/ic_home_plantlogo" />

        <TextView
            android:id="@+id/txtPlanttree"
            android:layout_width="55dp"
            android:layout_height="37dp"
            android:layout_marginStart= "44dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="@dimen/margin_default"
            android:text="@string/menu_plant"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/subTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />


        <View
            android:id="@+id/divider2"
            android:layout_width="379dp"
            android:layout_height="1dp"
            android:layout_marginTop="304dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@color/colorAccent"
            tools:layout_editor_absoluteX="278dp"
            tools:layout_editor_absoluteY="422dp"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


